# Xzenfmt

./: .dir-locals.el  .envrc  Cargo.toml  Map.org  README.org  Rakefile  VISION.org
cli/: Cargo.toml  cli.rs  interaction.rs
core/: Cargo.toml  command_runner.rs  core.rs  dependency_checker.rs  file_finder.rs  processor.rs  stripper.rs
core/stripper/: c_family.rs  common.rs  crystal.rs  fish.rs  haskell_elm.rs  json.rs  lua.rs  nix.rs  python.rs  ruby.rs  rust.rs  shell.rs  toml.rs  twig.rs  xml_html.rs  yaml.rs
samples/: test.main.rs
