[package]
name = "xzenfmt-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "core.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
